force-app/main/default/objects/Promotional_Payment_Term__c/Promotional_Payment_Term__c.object-meta.xml
<CustomObject>
    <label>Promotional Payment Term</label>
    <nameField>
        <label>Promotional Payment Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotional Payment Terms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>