force-app/main/default/objects/Promotional_Payment_Term__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>AND( Start_Date__c &lt;=  TODAY(),TODAY() &lt;=  End_Date__c,Enable__c = true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>