force-app/main/default/objects/Promotional_Payment_Term__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <defaultValue>$User.Deliver_Plant_Text__c</defaultValue>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant</valueSetName>
    </valueSet>
</CustomField>